Add flexmark dependency for HTML reports